[feature]CLEAN CODE: refactor code (sonarQube)