@@ -13,7 +13,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.sqli.intern.api.validator.utilities.enums.ExceptionMessageEnum.NAME_ALREADY_EXIST;
 import static com.sqli.intern.api.validator.utilities.enums.ExceptionMessageEnum.PROJECT_NOT_FOUND;
@@ -36,7 +35,7 @@ public class ProjectServiceImpl implements ProjectService {
                     projectDto.setName(projectEntity.getName());
                     return projectDto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -75,7 +74,7 @@ public class ProjectServiceImpl implements ProjectService {
         List<ResponseDto> responseDtos = project.getOperations().stream()
                 .map(OperationMapper::map)
                 .map(operationService::runTest)
-                .collect(Collectors.toList());
+                .toList();
         ProjectDto projectDto = ProjectMapper.map(project);
         projectDto.setResponseDto(responseDtos);
         return projectDto;
